Fix z-index for filters-navbar to show select2 dropdowns properly

--- a/public/assets/src/opennemas-webarch/less/components/_navbar.less
+++ b/public/assets/src/opennemas-webarch/less/components/_navbar.less
@@ -2,7 +2,7 @@
   background: #fff;
   box-shadow: 0px 1px 3px @background-color;
   left: 0;
-  min-height: navbar-height;
+  min-height: @navbar-height;
   padding-left: @sidebar-width-collapsed;
   position: fixed;
   top: @header-height;
@@ -143,11 +143,12 @@
 .filters-navbar {
   background: @background-color;
   box-shadow: none;
-  min-height: navbar-height;
+  min-height: @navbar-height;
   padding: 7px 15px;
   position: relative;
   top: 0;
   width: 100%;
+  z-index: 10;
 }
 
 .selected-navbar {
